# lapce

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  Makefile  README.md  SLOW_OPERATIONS_ANALYSIS.md
.claude/commands/: self-reflect.md
defaults/: dark-theme.toml  icon-theme.toml  keymaps-common.toml  keymaps-macos.toml  keymaps-nonmacos.toml  light-theme.toml  settings.toml
defaults/plugins/lapce-ruby/: lapce-ruby.wasm  volt.toml
extra/linux/: dev.lapce.lapce.desktop  dev.lapce.lapce.metainfo.xml
extra/macos/SourceDelve.app/Contents/: Info.plist
extra/macos/SourceDelve.app/Contents/Resources/: sourcedelve.icns
extra/windows/wix/: lapce.wxs
floem-local/: Cargo.toml
floem-local/editor-core/src/: command.rs  cursor.rs  editor.rs  indent.rs  line_ending.rs  selection.rs  word.rs
floem-local/editor-core/src/buffer/: mod.rs  rope_text.rs
floem-local/examples/color_palette/src/: main.rs
floem-local/examples/context/src/: main.rs
floem-local/examples/counter/src/: main.rs
floem-local/examples/flight_booker/src/: main.rs
floem-local/examples/keyboard_handler/src/: main.rs
floem-local/examples/layout/src/: draggable_sidebar.rs  holy_grail.rs  left_sidebar.rs  main.rs  right_sidebar.rs  tab_navigation.rs
floem-local/examples/pan-zoom/src/: main.rs  pan_zoom_view.rs
floem-local/examples/stacks/src/: dyn_stack.rs  virtual_stack.rs
floem-local/examples/syntax-editor/src/: main.rs
floem-local/examples/themes/src/: main.rs
floem-local/examples/timer/src/: main.rs
floem-local/examples/todo-complex/src/: app_config.rs  main.rs  todo.rs  todo_state.rs
floem-local/examples/tokio-timer/src/: main.rs
floem-local/examples/view-transition/src/: music_player.rs
floem-local/examples/webgpu/src/: lib.rs
floem-local/examples/widget-gallery/src/: buttons.rs  canvas.rs  checkbox.rs  context_menu.rs  draggable.rs  form.rs  images.rs  inputs.rs  lists.rs  main.rs  radio_buttons.rs  rich_text.rs
floem-local/examples/window-icon/src/: main.rs
floem-local/examples/window-scale/src/: main.rs
floem-local/examples/window-size/src/: main.rs
floem-local/reactive/src/: derived.rs  effect.rs  lib.rs  scope.rs  signal.rs
floem-local/reactive/tests/: effect.rs
floem-local/renderer/src/: gpu_resources.rs  lib.rs  swash.rs
floem-local/renderer/src/text/: layout.rs  mod.rs
floem-local/src/: action.rs  animate.rs  app.rs  app_handle.rs  app_state.rs  border_path_iter.rs  clipboard.rs  context.rs  easing.rs  event.rs  ext_event.rs  file_action.rs  id.rs  inspector.rs  keyboard.rs  lib.rs  nav.rs  pointer.rs  profiler.rs  renderer.rs  responsive.rs  screen_layout.rs  style.rs  theme.rs  view.rs  view_state.rs  window.rs  window_handle.rs  window_id.rs  window_tracking.rs
floem-local/src/inspector/: data.rs  view.rs
floem-local/src/views/: checkbox.rs  clip.rs  decorator.rs  dropdown.rs  dyn_container.rs  dyn_stack.rs  dyn_view.rs  img.rs  label.rs  list.rs  radio_button.rs  resizable.rs  rich_text.rs  scroll.rs  slider.rs  stack.rs  svg.rs  tab.rs  text_editor.rs  text_input.rs  toggle_button.rs  tooltip.rs  value_container.rs  virtual_list.rs  virtual_stack.rs
floem-local/src/views/editor/: actions.rs  gutter.rs  layout.rs  mod.rs  movement.rs  phantom_text.rs  text.rs  text_document.rs  view.rs  visual_line.rs
floem-local/src/views/editor/keypress/: key.rs  press.rs
floem-local/tiny_skia/src/: lib.rs
floem-local/vello/src/: lib.rs
floem-local/vger/src/: lib.rs
lapce-app/: Cargo.toml
lapce-app/src/: about.rs  alert.rs  app.rs  code_action.rs  code_lens.rs  command.rs  completion.rs  config.rs  db.rs  definition_picker.rs  doc.rs  editor.rs  editor_tab.rs  file_icon.rs  find.rs  focus_text.rs  folder_picker.rs  git_state.rs  global_search.rs  go_to_file.rs  go_to_line.rs  go_to_symbol.rs  id.rs  inline_completion.rs  keymap.rs  keypress.rs  layout_state.rs  lib.rs  listener.rs  lsp.rs  lsp_progress.rs  main_split.rs  markdown.rs  palette.rs  palettes.rs  path.rs  plugin.rs  popups.rs  projects.rs  proxy.rs  (+21 more)
lapce-app/src/app/: editor_tabs.rs  grammars.rs  ipc.rs  logging.rs  lsp_views.rs  menu.rs  palette_view.rs  ui_components.rs
lapce-app/src/config/: color.rs  color_theme.rs  core.rs  editor.rs  icon.rs  icon_theme.rs  layout.rs  svg.rs  ui.rs  watcher.rs
lapce-app/src/editor/: gutter.rs  location.rs  ops_completion.rs  ops_edit.rs  ops_file.rs  ops_lsp.rs  ops_navigation.rs  ops_pointer.rs  ops_search.rs  ops_selection.rs  ruby.rs  view.rs
lapce-app/src/file_explorer/: data.rs  mod.rs  node.rs  view.rs
lapce-app/src/keypress/: condition.rs  key.rs  keymap.rs  loader.rs  press.rs
lapce-app/src/palette/: item.rs  kind.rs
lapce-app/src/panel/: call_hierarchy_view.rs  data.rs  document_symbol.rs  global_search_view.rs  implementation_view.rs  kind.rs  mod.rs  plugin_view.rs  position.rs  problem_view.rs  references_view.rs  schema_view.rs  source_control_view.rs  view.rs
lapce-core/: Cargo.toml  build.rs
lapce-core/src/: directory.rs  encoding.rs  language.rs  lens.rs  lib.rs  rope_text_pos.rs  style.rs
lapce-core/src/syntax/: edit.rs  highlight.rs  mod.rs  util.rs
lapce-proxy/: Cargo.toml
lapce-proxy/src/: buffer.rs  cli.rs  dispatch.rs  lib.rs  project.rs  schema.rs  semgrep.rs  shell_env.rs  watcher.rs
lapce-proxy/src/lsp/: client.rs  manager.rs  mod.rs
lapce-proxy/src/plugin/: catalog.rs  lsp.rs  mod.rs  psp.rs  wasi.rs
lapce-rpc/src/: buffer.rs  core.rs  counter.rs  file.rs  file_line.rs  lib.rs  parse.rs  plugin.rs  project.rs  proxy.rs  schema.rs  stdio.rs  style.rs
plugins/lapce-ruby/: Cargo.toml
plugins/lapce-ruby/psp-types-local/: Cargo.toml
plugins/lapce-ruby/src/: main.rs
