[package]
name         = "lapce"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
default-run  = "sourcedelve"

[dependencies]
lapce-app   = { path = "./lapce-app" }
lapce-proxy = { path = "./lapce-proxy" }

[[bin]]
name = "sourcedelve"
path = "lapce-app/src/bin/lapce.rs"

[[bin]]
name = "sourcedelve-proxy"
path = "lapce-proxy/src/bin/lapce-proxy.rs"

[workspace]
members = ["lapce-app", "lapce-proxy", "lapce-rpc", "lapce-core"]
exclude = ["floem-local"]

[workspace.package]
version      = "0.4.6"
edition      = "2024"
rust-version = "1.87.0"
license      = "Apache-2.0"
homepage     = "https://sourcedelve.dev"
authors      = ["Dongdong Zhou <dzhou121@gmail.com>"]

[workspace.dependencies]
anyhow            = { version = "1.0" }
backtrace         = { version = "0.3" }
chrono            = { version = "0.4" }
clap              = { version = "4.5.60", default-features = false, features = ["std", "help", "usage", "derive"] }
crossbeam-channel = { version = "0.5.15" }
directories       = { version = "6.0.0" }
flate2            = { version = "1.1" }
git2              = { version = "0.20.4", features = ["vendored-openssl"] }
globset           = { version = "0.4.18" }
hashbrown         = { version = "0.14.5", features = ["serde"] }
im                = { version = "15.0.0", features = ["serde"] }
include_dir       = { version = "0.7" }
indexmap          = { version = "2.13", features = ["serde"] }
interprocess      = { version = "2.4.0" }
itertools         = { version = "0.14.0" }
notify            = { version = "8.2.0", features = ["serde"] }
once_cell         = { version = "1.19" }
parking_lot       = { version = "0.12.5" }
rayon             = { version = "1.11.0" }
regex             = { version = "1.12.3" }
remain            = { version = "0.2" }
semver            = { version = "1.0" }
reqwest           = { version = "0.12", features = ["blocking", "json", "socks"] }
serde             = { version = "1.0" }
serde_json        = { version = "1.0" }
smallvec          = { version = "1.15.1" }
strum             = { version = "0.27.1" }
strum_macros      = { version = "0.27.1" }
tar               = { version = "0.4" }
tempfile          = { version = "3.12.0" }
thiserror         = { version = "2.0" }
toml              = { version = "*" }
toml_edit         = { version = "0.20.2", features = ["serde"] }
url               = { version = "2.5.0" }
zstd              = { version = "0.13.3" }                                                                         # follow same version wasmtime-cache in lockfile

lsp-types = { version = "0.95.1", features = ["proposed"] }                                                  # not following semver, so should be locked to patch version updates only
lapce-xi-rope = { version = "0.4.0", features = ["serde"] }

lapce-core  = { path = "./lapce-core" }
lapce-rpc   = { path = "./lapce-rpc" }
lapce-proxy = { path = "./lapce-proxy" }

# floem = { git = "https://github.com/lapce/floem", rev = "e0dd862564e3afbad5cba8ebe60df166a7a41e56", features = ["editor", "serde", "default-image-formats", "rfd-async-std"] }
floem = { path = "./floem-local", features = ["editor", "serde", "default-image-formats", "rfd-async-std"] }
# floem-editor-core = { git = "https://github.com/lapce/floem", rev = "e0dd862564e3afbad5cba8ebe60df166a7a41e56", features = ["serde"] }
floem-editor-core = { path = "./floem-local/editor-core/", features = ["serde"] }

[patch.crates-io]
# Temporarily patch lsp-types with a version that adds message-type debug
lsp-types = { git = "https://github.com/lapce/lsp-types", rev = "feaa1e2ec80975c9dadd400a238ceacf071058e6" }
# cargo vendor issue: https://github.com/rust-lang/cargo/issues/10310
# dpi comes from winit (source) and muda (crate)
dpi = { git = "https://github.com/rust-windowing/winit", rev = "ee245c569d65fdeacf705ee5eedb564508d10ebe" }


[workspace.dependencies.tracing]
git     = "https://github.com/tokio-rs/tracing"
rev     = "908cc432a5994f6e17c8f36e13c217dc40085704"
package = "tracing"

[workspace.dependencies.tracing-log]
git     = "https://github.com/tokio-rs/tracing"
rev     = "908cc432a5994f6e17c8f36e13c217dc40085704"
package = "tracing-log"

[workspace.dependencies.tracing-subscriber]
git     = "https://github.com/tokio-rs/tracing"
rev     = "908cc432a5994f6e17c8f36e13c217dc40085704"
package = "tracing-subscriber"

[workspace.dependencies.tracing-appender]
git     = "https://github.com/tokio-rs/tracing"
rev     = "908cc432a5994f6e17c8f36e13c217dc40085704"
package = "tracing-appender"

[workspace.dependencies.windows-sys]
version  = "0"
features = ["Win32_Foundation"]

[profile.release-lto]
inherits      = "release"
lto           = true
codegen-units = 1

# A profile which compiles all (non-workspace) dependencies in release mode
# but Lapce code in dev mode. This gives a good debugging experience for your
# code and fast performance of other people's code. After the initial
# build subsequent ones are as fast as dev mode builds.
# See https://doc.rust-lang.org/cargo/reference/profiles.html
# To use this profile:
#   cargo build --profile fastdev
#   cargo run --profile fastdev --bin sourcedelve
[profile.fastdev.package."*"]
opt-level = 3

[profile.fastdev]
inherits = "dev"
