[package]
name         = "lapce-proxy"
license      = { workspace = true }
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true }
crossbeam-channel  = { workspace = true }
directories        = { workspace = true }
globset            = { workspace = true }
indexmap           = { workspace = true }
interprocess       = { workspace = true }
notify             = { workspace = true }
parking_lot        = { workspace = true }
regex              = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-log        = { workspace = true }
url                = { workspace = true }

lsp-types = { workspace = true }

lapce-xi-rope     = { workspace = true }
lapce-core        = { workspace = true }
lapce-rpc         = { workspace = true }
floem-editor-core = { workspace = true }

# proxy specific dependencies

dyn-clone    = "1.0.16"
walkdir      = "2.4.0"
jsonrpc-lite = "0.6.0"
libc         = "0.2"

# deleting files
trash = "3.0.6"

# search
ignore        = "0.4"
grep-searcher = "0.1"
grep-matcher  = "0.1"
grep-regex    = "0.1"

[target.'cfg(target_os = "macos")'.dependencies.locale_config]
git    = "https://github.com/lapce/locale_config.git"
branch = "lapce"

[dev-dependencies]
tempfile = { workspace = true }
